# flame

./: .env.example  Cargo.toml  README.md  cookies.txt  diesel.toml  docker-compose.yaml
migrations/: 0001_account_table.sql  0002_account_table.sql
src/: main.rs
src/api/: mod.rs
src/api/auth/: auth.rs  confirmation.rs  login.rs  logout.rs  mod.rs  signup.rs
src/config/: db.rs
src/middlware/: logger.rs  mod.rs
src/utils/: helpers.rs  mod.rs  redis.rs
