[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-actors = "4.3"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
sqlx = { version = "0.7", features = [ "runtime-async-std","tls-native-tls",  "postgres", "uuid"] }
dotenv = "0.15.0"
once_cell = "1.9"
bcrypt = "0.15"
thiserror = "1.0.61"
actix-redis = "0.10"
redis = { version = "0.25.3", features = ["async-std-native-tls-comp"] }
rand = "0.8"
jsonwebtoken = "7.0"
